--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -1,4 +1,5 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Plexapp Android Client</name>
    <parent>
@@ -53,7 +54,57 @@
          <artifactId>juniversalchardet</artifactId>
          <version>1.0.3</version>
       </dependency>
-                  
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-youtube</artifactId>
+         <version>2.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-youtube-meta</artifactId>
+         <version>2.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-core</artifactId>
+         <version>1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-media</artifactId>
+         <version>1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-client</artifactId>
+         <version>1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.gdata</groupId>
+         <artifactId>gdata-client-meta</artifactId>
+         <version>1.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.google.guava</groupId>
+         <artifactId>guava</artifactId>
+         <version>11.0.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.gdata</groupId>
+        <artifactId>mail</artifactId>
+        <version>1.0</version>
+      </dependency>      
+      <dependency>
+        <groupId>com.google.gdata</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.android</groupId>
+        <artifactId>youtube-android-player-api</artifactId>
+        <version>1.0.0</version>
+      </dependency>
+            
    </dependencies>
 
    <build>
