--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -5,7 +5,7 @@
    <parent>
       <groupId>us.nineworlds.serenity</groupId>
       <artifactId>serenity-parent</artifactId>
-      <version>1.7.4-SNAPSHOT</version>
+      <version>1.7.4b</version>
    </parent>
 
    <artifactId>serenity-app</artifactId>
@@ -35,17 +35,17 @@
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>subtitle-converter</artifactId>
-         <version>1.7.4-SNAPSHOT</version>
+         <version>1.7.4b</version>
       </dependency>
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>plexapp-rest-library</artifactId>
-         <version>1.7.4-SNAPSHOT</version>
+         <version>1.7.4b</version>
       </dependency>
       <dependency>
          <groupId>us.nineworlds.serenity</groupId>
          <artifactId>menudrawer</artifactId>
-         <version>1.7.4-SNAPSHOT</version>
+         <version>1.7.4b</version>
          <type>apklib</type>
       </dependency>
       <dependency>
