--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -70,6 +70,12 @@
               </exclusion>
           </exclusions>
       </dependency>
+       <dependency>
+           <groupId>com.android.support</groupId>
+           <artifactId>cardview-v7</artifactId>
+           <version>21.0.0-rc1</version>
+           <type>aar</type>
+       </dependency>
       <dependency>
          <groupId>com.android.support</groupId>
          <artifactId>recyclerview-v7</artifactId>
