--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,54 @@
                <artifactId>android-maven-plugin</artifactId>
                <version>3.8.0</version>
             </plugin>
+            <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+            <plugin>
+            	<groupId>org.eclipse.m2e</groupId>
+            	<artifactId>lifecycle-mapping</artifactId>
+            	<version>1.0.0</version>
+            	<configuration>
+            		<lifecycleMappingMetadata>
+            			<pluginExecutions>
+            				<pluginExecution>
+            					<pluginExecutionFilter>
+            						<groupId>org.jacoco</groupId>
+            						<artifactId>
+            							jacoco-maven-plugin
+            						</artifactId>
+            						<versionRange>
+            							[0.7.0.201403182114,)
+            						</versionRange>
+            						<goals>
+            							<goal>prepare-agent</goal>
+            						</goals>
+            					</pluginExecutionFilter>
+            					<action>
+            						<ignore></ignore>
+            					</action>
+            				</pluginExecution>
+            				<pluginExecution>
+            					<pluginExecutionFilter>
+            						<groupId>
+            							com.jayway.maven.plugins.android.generation2
+            						</groupId>
+            						<artifactId>
+            							android-maven-plugin
+            						</artifactId>
+            						<versionRange>
+            							[3.8.0,)
+            						</versionRange>
+            						<goals>
+            							<goal>consume-aar</goal>
+            						</goals>
+            					</pluginExecutionFilter>
+            					<action>
+            						<ignore></ignore>
+            					</action>
+            				</pluginExecution>
+            			</pluginExecutions>
+            		</lifecycleMappingMetadata>
+            	</configuration>
+            </plugin>
          </plugins>
       </pluginManagement>
       <extensions>
