--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
             <plugin>
                <groupId>com.jayway.maven.plugins.android.generation2</groupId>
                <artifactId>android-maven-plugin</artifactId>
-               <version>3.8.0</version>
+               <version>3.9.0-rc.2</version>
             </plugin>
             <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
             <plugin>
