--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -43,14 +43,14 @@
             android:name="us.nineworlds.serenity.ui.browser.movie.MovieBrowserActivity"
             android:label="@string/title_activity_movie_browser"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.MainActivity"
             android:hardwareAccelerated="true"
             android:label="@string/title_activity_main"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/CustomActionBarTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,42 +61,42 @@
             android:name="us.nineworlds.serenity.ui.browser.tv.TVShowBrowserActivity"
             android:label="@string/title_activity_tvbrowser_show"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.browser.music.MusicActivity"
             android:label="@string/title_activity_tvbrowser_show"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.browser.music.albums.MusicAlbumsActivity"
             android:label="@string/title_activity_tvbrowser_show"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.browser.music.tracks.MusicTracksActivity"
             android:label="@string/title_activity_tvbrowser_show"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.browser.tv.seasons.TVShowSeasonBrowserActivity"
             android:label="@string/title_activity_tvbrowser_show_season"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.browser.tv.episodes.EpisodeBrowserActivity"
             android:label="@string/title_activity_tvbrowser_show_episodes"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
         </activity>
         <activity
             android:name="us.nineworlds.serenity.ui.video.player.SerenitySurfaceViewVideoActivity"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -112,7 +112,7 @@
         <activity
             android:name="us.nineworlds.serenity.ui.search.SearchableActivity"
             android:screenOrientation="sensorLandscape"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
+            android:theme="@style/Theme.AppCompat" >
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
 
