--- a/serenity-app/project.properties
+++ b/serenity-app/project.properties
@@ -12,4 +12,5 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-17
-android.library.reference.1=../android-menudrawer/menudrawer
+android.library.reference.1=../../platform_frameworks_support/v7/appcompat
+android.library.reference.2=../android-menudrawer/menudrawer
