--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>apk</packaging>
 
 	<properties>
-		<android-version>4.2.2_r2</android-version>
+		<android-version>4.3_r2</android-version>
 	</properties>
 
 	<dependencies>
@@ -155,17 +155,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- <dependency> -->
-		<!-- <groupId>android</groupId> -->
-		<!-- <artifactId>android</artifactId> -->
-		<!-- <version>${android-version}</version> -->
-		<!-- <scope>provided</scope> -->
-		<!-- </dependency> -->
 		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>android</artifactId>
-			<version>4.1.1.4</version>
-			<scope>provided</scope>
+		   <groupId>android</groupId>
+		   <artifactId>android</artifactId>
+		   <version>${android-version}</version>
+		   <scope>provided</scope>
 		</dependency>
 
 	</dependencies>
