--- a/plexapp-rest-library/pom.xml
+++ b/plexapp-rest-library/pom.xml
@@ -50,6 +50,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
       <plugins>
          <plugin>
             <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.1</version>
             <configuration>
                <source>1.5</source>
                <target>1.5</target>
