--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -165,7 +165,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>Serenity-${version}</finalName>
+		<finalName>Serenity-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>com.jayway.maven.plugins.android.generation2</groupId>
@@ -187,8 +187,8 @@
 					<zipalign>
 						<verbose>true</verbose>
 						<skip>false</skip>
-						<inputApk>${project.build.directory}/Serenity-${version}.apk</inputApk>
-						<outputApk>${project.build.directory}/Serenity-${version}-aligned.apk</outputApk>
+						<inputApk>${project.build.directory}/Serenity-${project.version}.apk</inputApk>
+						<outputApk>${project.build.directory}/Serenity-${project.version}-aligned.apk</outputApk>
 					</zipalign>
 					<proguard>
 						<skip>true</skip>
@@ -224,6 +224,7 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
