--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
     <uses-sdk
         android:minSdkVersion="13"
-        android:targetSdkVersion="13" />
+        android:targetSdkVersion="L" />
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
