--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -12,7 +12,7 @@
    <packaging>apk</packaging>
 
 	<properties>
-		<android-version>4.3_r2</android-version>
+		<android-version>L_r1</android-version>
 	</properties>
 
 	<dependencies>
@@ -27,14 +27,21 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>android.support</groupId>
-			<artifactId>compatibility-v4</artifactId>
-			<version>19.0.1</version>
-		</dependency>
-		<dependency>
 			<groupId>us.nineworlds.android</groupId>
 			<artifactId>appcompat-v7</artifactId>
 			<version>20.0.0</version>
+			<type>apklib</type>
+			<exclusions>
+				<exclusion>
+					<artifactId>compatibility-v4</artifactId>
+					<groupId>android.support</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>us.nineworlds.android</groupId>
+			<artifactId>leanback-v17</artifactId>
+			<version>21.0.0-SNAPSHOT</version>
 			<type>apklib</type>
 		</dependency>
 		<dependency>
@@ -156,10 +163,10 @@
 		</dependency>
 
 		<dependency>
-		   <groupId>android</groupId>
-		   <artifactId>android</artifactId>
-		   <version>${android-version}</version>
-		   <scope>provided</scope>
+		  <groupId>android</groupId>
+		  <artifactId>android</artifactId>
+		  <version>L_r1</version>
+		  <scope>provided</scope>
 		</dependency>
 
 	</dependencies>
@@ -181,7 +188,7 @@
 				</executions>
 				<configuration>
 					<sdk>
-						<platform>17</platform>
+						<platform>L</platform>
 					</sdk>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<zipalign>
