--- a/serenity-app/project.properties
+++ b/serenity-app/project.properties
@@ -11,5 +11,7 @@
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+target=android-L
 android.library.reference.1=../../platform_frameworks_support/v7/appcompat
+android.library.reference.2=../../adt-leanback-support/leanback-v17
+android.library.reference.3=../../adt-leanback-support/recyclerview-v7
