--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>us.nineworlds.serenity</groupId>
 		<artifactId>serenity-parent</artifactId>
-		<version>1.8.0</version>
+		<version>1.8.1-SNAPSHOT</version>
 	</parent>
 
    <artifactId>serenity-app</artifactId>
@@ -47,12 +47,12 @@
 		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>subtitle-converter</artifactId>
-			<version>1.8.0</version>
+			<version>1.8.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>plexapp-rest-library</artifactId>
-			<version>1.8.0</version>
+			<version>1.8.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.juniversalchardet</groupId>
@@ -136,6 +136,12 @@
 			<artifactId>robolectric</artifactId>
 			<version>2.3</version>
 			<scope>test</scope>
+			<exclusions>
+			   <exclusion>
+			      <artifactId>support-v4</artifactId>
+			      <groupId>com.android.support</groupId>
+			   </exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
