--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -117,8 +117,13 @@
 		<dependency>
 			<groupId>com.squareup.okhttp</groupId>
 			<artifactId>okhttp</artifactId>
-			<version>1.5.3</version>
+			<version>1.6.0</version>
 		</dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp-urlconnection</artifactId>
+            <version>1.6.0</version>
+        </dependency>
 		<dependency>
 			<groupId>com.squareup.picasso</groupId>
 			<artifactId>picasso</artifactId>
