--- a/serenity-app/AndroidManifest.xml
+++ b/serenity-app/AndroidManifest.xml
@@ -22,7 +22,8 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    
     <uses-feature
         android:name="android.hardware.touchscreen"
         android:required="false" />
@@ -168,7 +169,7 @@
             android:name=".core.services.GDMService"
             tools:ignore="MissingRegistered" />
         <service android:name="us.nineworlds.serenity.core.services.YouTubeTrailerSearchIntentService" />
-        <service android:name="us.nineworlds.serenity.core.services.OnDeckRecommendationIntentService"/>
+        <service android:name="us.nineworlds.serenity.core.services.OnDeckRecommendationIntentService" android:enabled="true" android:exported="true"/>
         
         <provider
             android:name="us.nineworlds.serenity.ui.search.SerenitySuggestionProvider"
