--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -8,8 +8,8 @@
 		<version>1.8.1-SNAPSHOT</version>
 	</parent>
 
-   <artifactId>serenity-app</artifactId>
-   <packaging>apk</packaging>
+	<artifactId>serenity-app</artifactId>
+	<packaging>apk</packaging>
 
 	<properties>
 		<android-version>L_r1</android-version>
@@ -25,6 +25,22 @@
 			<groupId>com.google.analytics</groupId>
 			<artifactId>mobile-analytics</artifactId>
 			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.android</groupId>
+			<artifactId>youtube-android-player-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-youtube</artifactId>
+			<version>v3-rev113-1.19.0</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>httpclient</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>us.nineworlds.android</groupId>
@@ -60,56 +76,6 @@
 			<version>1.0.3</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-youtube</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-youtube-meta</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-core</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-media</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-client</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>gdata-client-meta</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.guava</groupId>
-			<artifactId>guava</artifactId>
-			<version>11.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>mail</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.gdata</groupId>
-			<artifactId>activation</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.android</groupId>
-			<artifactId>youtube-android-player-api</artifactId>
-			<version>1.0.0</version>
-		</dependency>
-		<dependency>
 			<groupId>com.mcxiaoke.volley</groupId>
 			<artifactId>library</artifactId>
 			<version>1.0.3</version>
@@ -119,11 +85,11 @@
 			<artifactId>okhttp</artifactId>
 			<version>1.6.0</version>
 		</dependency>
-        <dependency>
-            <groupId>com.squareup.okhttp</groupId>
-            <artifactId>okhttp-urlconnection</artifactId>
-            <version>1.6.0</version>
-        </dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp</groupId>
+			<artifactId>okhttp-urlconnection</artifactId>
+			<version>1.6.0</version>
+		</dependency>
 		<dependency>
 			<groupId>com.squareup.picasso</groupId>
 			<artifactId>picasso</artifactId>
@@ -142,10 +108,18 @@
 			<version>2.3</version>
 			<scope>test</scope>
 			<exclusions>
-			   <exclusion>
-			      <artifactId>support-v4</artifactId>
-			      <groupId>com.android.support</groupId>
-			   </exclusion>
+				<exclusion>
+					<artifactId>support-v4</artifactId>
+					<groupId>com.android.support</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>commons-logging</artifactId>
+					<groupId>commons-logging</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>httpclient</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 		<dependency>
@@ -174,10 +148,10 @@
 		</dependency>
 
 		<dependency>
-		  <groupId>android</groupId>
-		  <artifactId>android</artifactId>
-		  <version>L_r1</version>
-		  <scope>provided</scope>
+			<groupId>android</groupId>
+			<artifactId>android</artifactId>
+			<version>L_r1</version>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
