--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -337,9 +337,37 @@
 						</executions>
 					</plugin>
 					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>build-helper-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>parse-version</id>
+								<goals>
+									<goal>parse-version</goal>
+								</goals>
+								<phase>validate</phase>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
 						<groupId>com.jayway.maven.plugins.android.generation2</groupId>
 						<artifactId>android-maven-plugin</artifactId>
 						<inherited>true</inherited>
+						<executions>
+							<execution>
+								<id>update-version-number</id>
+								<goals>
+									<goal>manifest-update</goal>
+								</goals>
+								<phase>process-resources</phase>
+                                <configuration>
+                                    <manifest>
+                                        <versionName>${parsedVersion.majorVersion}.${parsedVersion.minorVersion}.${parsedVersion.incrementalVersion}.${maven.build.timestamp}</versionName>
+                                        <versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
+                                    </manifest>
+                                </configuration>	
+							</execution>
+						</executions>
 						<configuration>
 							<sign>
 								<debug>false</debug>
@@ -349,6 +377,5 @@
 				</plugins>
 			</build>
 		</profile>
-
 	</profiles>
 </project>
