--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>us.nineworlds.serenity</groupId>
 		<artifactId>serenity-parent</artifactId>
-		<version>1.8.3</version>
+		<version>1.8.4-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>serenity-app</artifactId>
@@ -57,12 +57,12 @@
 		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>subtitle-converter</artifactId>
-			<version>1.8.3</version>
+			<version>1.8.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>plexapp-rest-library</artifactId>
-			<version>1.8.3</version>
+			<version>1.8.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.juniversalchardet</groupId>
