--- a/serenity-app/project.properties
+++ b/serenity-app/project.properties
@@ -13,5 +13,5 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 # Project target.
 target=android-21
 android.library.reference.1=../../platform_frameworks_support/v7/appcompat
-android.library.reference.2=../../../adt-leanback-support/leanback-v17
-android.library.reference.3=../../../adt-leanback-support/recyclerview-v7
+android.library.reference.2=../../adt-leanback-support/leanback-v17
+android.library.reference.3=../../adt-leanback-support/recyclerview-v7
