--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -55,6 +55,18 @@
 			<type>apklib</type>
 		</dependency>
 		<dependency>
+			<groupId>us.nineworlds.android</groupId>
+			<artifactId>twoway-view-core</artifactId>
+			<version>0.1.3</version>
+			<type>apklib</type>
+		</dependency>
+		<dependency>
+			<groupId>us.nineworlds.android</groupId>
+			<artifactId>twoway-view-layouts</artifactId>
+			<version>0.1.3</version>
+			<type>apklib</type>
+		</dependency>
+		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>subtitle-converter</artifactId>
 			<version>1.9.0-SNAPSHOT</version>
