--- a/serenity-app/pom.xml
+++ b/serenity-app/pom.xml
@@ -54,7 +54,7 @@
 			<version>21.0.0</version>
 			<type>apklib</type>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>us.nineworlds.android</groupId>
 			<artifactId>twoway-view-core</artifactId>
 			<version>0.1.3</version>
@@ -66,6 +66,7 @@
 			<version>0.1.3</version>
 			<type>apklib</type>
 		</dependency>
+-->
 		<dependency>
 			<groupId>us.nineworlds.serenity</groupId>
 			<artifactId>subtitle-converter</artifactId>
