--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
    - pip install --user codecov
 
 script:
-   - travis_wait ./gradlew clean plex-rest-library:jacocoTestReport jacocoTestReportDebug
+   - travis_wait 40 ./gradlew clean plex-rest-library:jacocoTestReport jacocoTestReportDebug
    
 after_success:
   - codecov
