--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -48,15 +48,15 @@ dependencies {
   implementation project(':serenity-common')
   implementation project(':serenity-android-common')
 
-  implementation 'com.google.code.gson:gson:2.7'
-  implementation 'com.mcxiaoke.volley:library:1.0.16'
   implementation 'com.birbit:android-priority-jobqueue:2.0.1'
   implementation 'com.squareup.dagger:dagger:1.2.2'
   kapt 'com.squareup.dagger:dagger-compiler:1.2.2'
   implementation 'org.greenrobot:eventbus:3.0.0'
   implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.9.6'
   implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation 'com.squareup.retrofit2:converter-jackson:2.3.0'
   implementation 'com.squareup.okhttp3:okhttp:3.8.1'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
   implementation 'com.jakewharton.timber:timber:4.6.0'
 
   testImplementation 'junit:junit:4.12'
